# web-scraper

./: README.md  pyproject.toml  wiki_content.txt
tests/: test_web_scraper.py
web_scraper/: saving_to_file.py  scraper.py
